--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Генератор случайных чисел</title>
     <link href="random.css" rel="stylesheet" type="text/css">
     <style>
-        @font-face { font-family: MYRIADPRO-COND; src: url('MYRIADPRO-COND.OTF'); } 
+        @font-face { font-family: MYRIADPRO-REGULAR; src: url('MYRIADPRO-REGULAR.OTF'); } 
       h1 {
-         font-family: MYRIADPRO-COND
+         font-family: MYRIADPRO-REGULAR
       }
 
-        body { font-family: MYRIADPRO-COND;
+        body { font-family: MYRIADPRO-REGULAR;
   font-weight: 300;
   text-align: center;
   font-size: 17px;
@@ -22,7 +22,7 @@
   color: #000;
 }
 #timer {
-            font-size: 21px;
+            font-size: 15px;
             background: #fff;
             padding: 20px;
             border-radius: 10px;
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-    <h1>СЛУЧАЙНОЕ ЧИСЛО.РФ <br> - САМЫЙ ПРОСТОЙ, ТОЧНЫЙ И ПОНЯТНЫЙ <br> ГЕНЕРАТОР СЛУЧАЙНЫХ ЧИСЕЛ</h1>
+   <img src="название.png" alt="картинка" class="responsive-image">
     <div class="image-container">
         <img src="string.png" alt="картинка" class="responsive-image">
     </div>
@@ -84,7 +84,7 @@
 
 
     <button class="button"; onclick="generateRandomNumber()">СЛУЧАЙНОЕ ЧИСЛО</button>
-<div id="timer">Сейчас: </div>
+<div id="timer">Сейчас: 28.03.2025 в </div>
 
 <script>
     function updateTime() {
@@ -95,7 +95,7 @@
             second: '2-digit', 
             hour12: false 
         };
-        document.getElementById('timer').innerText = 'Сейчас: ' + now .toLocaleTimeString('ru-RU', options) + ' GMT +3';
+        document.getElementById('timer').innerText = 'Сейчас: 28.03.2025 в ' + now .toLocaleTimeString('ru-RU', options) + ' GMT +3';
     }
 
     // Обновляем время каждую секунду
@@ -116,8 +116,11 @@
     </div>
     <br>
     <div class="image-container">
-        <img src="соцсети.png" alt="картинка" class="responsive-image">
+        <img src="колво.png" alt="картинка" class="responsive-image">
+        
+
     </div>
+    <img src="соцсети.png" alt="картинка" class="responsive-image">
 
 </body>
 </html>
